--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "js-yaml": "^4.1.0",
     "katex": "^0.16.22",
     "marked": "^14.1.4",
+    "mathjs": "^15.0.0",
     "mdast": "^3.0.0",
     "mdast-util-to-string": "^4.0.0",
     "medium-zoom": "^1.1.0",
